Event title alignment on small screen corrected with media query @App.css

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,10 @@ form input:focus {
   /* color: #05b851; */
   transition: all 0.4s ease;
 }
+
+@media screen and (max-width: 335px) {
+  .event-head {
+    position: relative;
+    bottom: 3rem;
+  }
+}
